<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/developer"
        android:title="@string/admin"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

    <item
        android:id="@+id/search_button"
        android:title="@string/search"
        android:icon="@drawable/ic_white_search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"
        app:actionLayout="@layout/noti_badges_item"
        app:showAsAction="always"/>

</menu>