<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_car"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        android:ems="10"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_light_car"
        android:id="@+id/car_photo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_car_photo"
        android:background="@drawable/round_btn"
        android:text="@string/add_car_photo"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:drawableLeft="@drawable/ic_camera"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/txt_car_id"
                android:text="@string/plate_number"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/txt_province"
                android:text="@string/province"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/txt_car_brand"
                android:text="@string/brand"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/txt_car_model"
                android:text="@string/model"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/txt_car_color"
                android:text="@string/color"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/edt_car_id"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingStart="5dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:ems="4"
                android:background="@color/edittext_bg"
                android:layout_marginTop="10dp"
                android:maxLength="8"
                android:inputType="text"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/province_spinner"
                    android:background="@color/edittext_bg"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_drop_down"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/brand_spinner"
                    android:background="@color/edittext_bg" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_drop_down"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/edt_model"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:ems="10"
                android:paddingStart="5dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:background="@color/edittext_bg"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:maxLength="24"
                android:inputType="text"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/color_spinner"
                    android:background="@color/edittext_bg" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_drop_down"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add"
            android:text="@string/add"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

</LinearLayout>